--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.Shopping_Cart"
         tools:targetApi="31">
         <activity
+            android:name=".FacturaActivity"
+            android:exported="false" />
+        <activity
             android:name=".CarroComprasActivity"
             android:exported="false" />
         <activity
